Updated instructions on the file

--- a/02_Model_Development.ipynb
+++ b/02_Model_Development.ipynb
@@ -12,6 +12,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Instructions\n",
+        "\n",
+        "* Run this notebook preferably on Google Colab so as to leverage additional RAM and GPU\n",
+        "* Key considerations:\n",
+        "    - Correct the paths below for the pickle files stored on your google drives. This is load the feature and label data for training and validation sets.\n",
+        "    - Keep track of the models getting stored. Store them on google drive and later download the best performing (E2E learning) model for simulation. Simulation will be run on local jupyter notebook\n"
+      ],
+      "metadata": {
+        "id": "HjnjSnj-_6KW"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tMZPAyR-7uaJ"
       },
@@ -2031,7 +2045,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rvUUAxh1-SfW"
+        "id": "M_h1stHF_4Ya"
       },
       "source": [
         "# 3. Model comparison"
@@ -2041,7 +2055,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XLFWiMVz-SfW"
+        "id": "CZvMvCO5_4Ya"
       },
       "outputs": [],
       "source": [
@@ -2052,8 +2066,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-vX992c0-SfW",
-        "outputId": "ad06449a-c264-48cb-b788-efaf3c1fc75f"
+        "id": "niWLSUCe_4Ya",
+        "outputId": "a962299b-06c1-4536-ffdf-2a1c764fe714"
       },
       "outputs": [
         {
@@ -2091,7 +2105,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rOT1pbm7-SfW"
+        "id": "ZUdfakT7_4Ya"
       },
       "outputs": [],
       "source": []
