--- a/01_Data_Preparation_and_EDA.ipynb
+++ b/01_Data_Preparation_and_EDA.ipynb
@@ -12,6 +12,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Instructions\n",
+        "\n",
+        "* Run this notebook preferably on local machine. It will be easier to read image files from local.\n",
+        "* Key considerations:\n",
+        "    - Download the Sully Chen's dataset on local.\n",
+        "    - Correct the paths accordingly in the below notebook while reading the dataset.\n",
+        "    - Keep track of the stored pickle files (features, labels, X_train, y_train, X_val, y_val). The relevant files will then be stored on google drive for subsequent steps during model training."
+      ],
+      "metadata": {
+        "id": "E-9GT8efBNAA"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "NddAsSH1NpYB"
       },
