--- a/03_Test_Simulation.ipynb
+++ b/03_Test_Simulation.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Instructions\n",
         "\n",
-        "* Run the simulator on local jupyter notebook.\n",
+        "* Run the simulator on local jupyter notebook. It will be easier to read image files from local when the simulator runs.\n",
         "* Key considerations:\n",
         "    - Force install openCV version '4.5.4'. Avoid version 4.6 and above\n",
         "    - Download/unzip the image data (images and data.txt); and copy them under 'driving_dataset' directory\n",
@@ -193,7 +193,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AaGLzK4R98jV"
+        "id": "Nt9LdB-ECt17"
       },
       "outputs": [],
       "source": [
@@ -248,7 +248,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nGofaoCN98jZ"
+        "id": "UVPXBQhLCt1-"
       },
       "source": [
         "Reference: https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_geometric_transformations/py_geometric_transformations.html"
@@ -273,7 +273,7 @@
       "execution_count": null,
       "metadata": {
         "id": "yjFPWAdWiJ73",
-        "outputId": "94de126d-021c-42dd-af57-3f9170c66e90"
+        "outputId": "282cf5d1-61a5-4a50-e6b7-459794bbbf9c"
       },
       "outputs": [
         {
